// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "top": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "bottom": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 3`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Image
      resizeMethod="auto"
      source={
        {
          "uri": "https://docs.teraportfoy.com/test-images/sliders/slider_1.jpg",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 100,
            "width": 100,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "bottom": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 4`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Image
      resizeMethod="auto"
      source={
        {
          "uri": "https://docs.teraportfoy.com/test-images/sliders/slider_1.jpg",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 100,
            "width": 100,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "bottom": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 5`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "top": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": undefined,
                  "fontSize": 15,
                },
                undefined,
                {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            theme={
              {
                "black": "#000000",
                "darkWhite": "#FDFCFF",
                "disabledDark": "#BDBCBF",
                "disabledLight": "#D7D1E9",
                "disabledLightDark": "#F6F6F6",
                "error": "#FF3434",
                "focused": "#654FA6",
                "grey": "#9A9A9A",
                "lightBlack": "#404040",
                "lightGrey": "#F5F4F6",
                "primary": "#8973CD",
                "primary15": "#EDEAF8",
                "primary30": "#DCD5F0",
                "primary5": "#F9F8FD",
                "secondary": "#82B98E",
                "succes": "#09CE63",
                "tertiary": "#67A7C1",
                "white": "#FFFFFF",
              }
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 6`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "marginRight": -7,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#EDEAF8",
              "borderRadius": 50,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#8973CD",
                "fontSize": 12,
                "lineHeight": 18,
              },
              undefined,
            ]
          }
        >
          T
        </Text>
        <View
          style={
            [
              {
                "borderRadius": 50,
                "padding": 2,
                "position": "absolute",
                "right": -5,
              },
              {
                "top": -5,
              },
            ]
          }
        >
          <View>
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  [
                    {
                      "height": 10,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#8973CD",
                      "borderRadius": 50,
                    },
                  ],
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 15,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
                theme={
                  {
                    "black": "#000000",
                    "darkWhite": "#FDFCFF",
                    "disabledDark": "#BDBCBF",
                    "disabledLight": "#D7D1E9",
                    "disabledLightDark": "#F6F6F6",
                    "error": "#FF3434",
                    "focused": "#654FA6",
                    "grey": "#9A9A9A",
                    "lightBlack": "#404040",
                    "lightGrey": "#F5F4F6",
                    "primary": "#8973CD",
                    "primary15": "#EDEAF8",
                    "primary30": "#DCD5F0",
                    "primary5": "#F9F8FD",
                    "secondary": "#82B98E",
                    "succes": "#09CE63",
                    "tertiary": "#67A7C1",
                    "white": "#FFFFFF",
                  }
                }
                typography={
                  {
                    "body": {
                      "medium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 14,
                        "lineHeight": 21,
                      },
                      "regular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "lineHeight": 16,
                      },
                      "smedium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 12,
                        "lineHeight": 18,
                      },
                      "sregular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 12,
                        "lineHeight": 16,
                      },
                      "xsmedium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 10,
                        "lineHeight": 16,
                      },
                      "xsregular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 10,
                        "lineHeight": 14,
                      },
                      "xxsmedium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 8,
                        "lineHeight": 12,
                      },
                      "xxsregular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 8,
                        "lineHeight": 12,
                      },
                    },
                    "heading": {
                      "h1": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 30,
                        "lineHeight": 45,
                      },
                      "h2": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 28,
                        "lineHeight": 42,
                      },
                      "h3": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 23,
                        "lineHeight": 35,
                      },
                      "h4": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 19,
                        "lineHeight": 29,
                      },
                      "h5": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 16,
                        "lineHeight": 25,
                      },
                    },
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginRight": -7,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#EDEAF8",
              "borderRadius": 10,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            },
            undefined,
          ]
        }
      >
        <Image
          resizeMethod="auto"
          source={
            {
              "uri": "https://docs.teraportfoy.com/test-images/sliders/slider_1.jpg",
            }
          }
          style={
            [
              {
                "borderRadius": 10,
                "height": 30,
                "width": 30,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 50,
                "padding": 2,
                "position": "absolute",
                "right": -5,
              },
              {
                "bottom": -2,
              },
            ]
          }
        >
          <View>
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  [
                    {
                      "height": 10,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#8973CD",
                      "borderRadius": 50,
                    },
                  ],
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 15,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
                theme={
                  {
                    "black": "#000000",
                    "darkWhite": "#FDFCFF",
                    "disabledDark": "#BDBCBF",
                    "disabledLight": "#D7D1E9",
                    "disabledLightDark": "#F6F6F6",
                    "error": "#FF3434",
                    "focused": "#654FA6",
                    "grey": "#9A9A9A",
                    "lightBlack": "#404040",
                    "lightGrey": "#F5F4F6",
                    "primary": "#8973CD",
                    "primary15": "#EDEAF8",
                    "primary30": "#DCD5F0",
                    "primary5": "#F9F8FD",
                    "secondary": "#82B98E",
                    "succes": "#09CE63",
                    "tertiary": "#67A7C1",
                    "white": "#FFFFFF",
                  }
                }
                typography={
                  {
                    "body": {
                      "medium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 14,
                        "lineHeight": 21,
                      },
                      "regular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "lineHeight": 16,
                      },
                      "smedium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 12,
                        "lineHeight": 18,
                      },
                      "sregular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 12,
                        "lineHeight": 16,
                      },
                      "xsmedium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 10,
                        "lineHeight": 16,
                      },
                      "xsregular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 10,
                        "lineHeight": 14,
                      },
                      "xxsmedium": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 8,
                        "lineHeight": 12,
                      },
                      "xxsregular": {
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 8,
                        "lineHeight": 12,
                      },
                    },
                    "heading": {
                      "h1": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 30,
                        "lineHeight": 45,
                      },
                      "h2": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 28,
                        "lineHeight": 42,
                      },
                      "h3": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 23,
                        "lineHeight": 35,
                      },
                      "h4": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 19,
                        "lineHeight": 29,
                      },
                      "h5": {
                        "fontFamily": "Poppins-Medium",
                        "fontSize": 16,
                        "lineHeight": 25,
                      },
                    },
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginRight": -7,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#EDEAF8",
              "borderRadius": 50,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#8973CD",
                "fontSize": 12,
                "lineHeight": 18,
              },
              undefined,
            ]
          }
        >
          T
        </Text>
        <View
          style={
            [
              {
                "borderRadius": 50,
                "padding": 2,
                "position": "absolute",
                "right": -5,
              },
              {
                "top": -5,
              },
            ]
          }
        >
          <View>
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  [
                    {
                      "height": 10,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#8973CD",
                      "borderRadius": 50,
                    },
                  ],
                  undefined,
                ]
              }
            >
              circular
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginRight": -7,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#EDEAF8",
              "borderRadius": 50,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            },
            undefined,
          ]
        }
      >
        <Image
          resizeMethod="auto"
          source={
            {
              "uri": "https://docs.teraportfoy.com/test-images/sliders/slider_1.jpg",
            }
          }
          style={
            [
              {
                "borderRadius": 50,
                "height": 30,
                "width": 30,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 50,
                "padding": 2,
                "position": "absolute",
                "right": -5,
              },
              {
                "bottom": -2,
              },
            ]
          }
        >
          <View>
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  [
                    {
                      "height": 10,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#8973CD",
                      "borderRadius": 50,
                    },
                  ],
                  undefined,
                ]
              }
            >
              circular
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 7`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "marginRight": -7,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#EDEAF8",
              "borderRadius": 50,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#8973CD",
                "fontSize": 12,
                "lineHeight": 18,
              },
              undefined,
            ]
          }
        >
          T
        </Text>
        <View
          style={
            [
              {
                "borderRadius": 50,
                "padding": 2,
                "position": "absolute",
                "right": -5,
              },
              {
                "bottom": -2,
              },
            ]
          }
        >
          <View>
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  [
                    {
                      "height": 10,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#8973CD",
                      "borderRadius": 50,
                    },
                  ],
                  undefined,
                ]
              }
            >
              circular
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEAF8",
            "borderRadius": 50,
            "height": 30,
            "justifyContent": "center",
            "width": 30,
          },
          {
            "backgroundColor": "#82B98E",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#fff",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 18,
            },
            undefined,
          ]
        }
      >
        +
        2
      </Text>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[` 8`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  />
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different badge position renders badge with bottom position 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "bottom": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different badge position renders badge with top position 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "top": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different border style renders badge with circular border 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": 0,
          },
          {
            "bottom": 0,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different border style renders badge with rounded border 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 10,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "top": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different sizes renders badge with medium sizes and label prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 28,
            "lineHeight": 42,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": -10,
          },
          {
            "bottom": -10,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different sizes renders badge with medium sizes and source prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 100,
          "justifyContent": "center",
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <Image
      resizeMethod="auto"
      source={
        {
          "uri": "https://docs.teraportfoy.com/test-images/sliders/slider_1.jpg",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 100,
            "width": 100,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 4,
            "position": "absolute",
            "right": 0,
          },
          {
            "top": 0,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 30,
                  "width": 30,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different sizes renders badge with small sizes  and source prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 50,
          "height": 30,
          "justifyContent": "center",
          "width": 30,
        },
        undefined,
      ]
    }
  >
    <Image
      resizeMethod="auto"
      source={
        {
          "uri": "https://docs.teraportfoy.com/test-images/sliders/slider_1.jpg",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 30,
            "width": 30,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 2,
            "position": "absolute",
            "right": -5,
          },
          {
            "top": -5,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 10,
                  "width": 10,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar renders badge with different sizes renders badge with small sizes and label prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEAF8",
          "borderRadius": 10,
          "height": 30,
          "justifyContent": "center",
          "width": 30,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#8973CD",
            "fontSize": 12,
            "lineHeight": 18,
          },
          undefined,
        ]
      }
    >
      T
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 50,
            "padding": 2,
            "position": "absolute",
            "right": -5,
          },
          {
            "top": -5,
          },
        ]
      }
    >
      <View>
        <View
          entering={BaseAnimationMock {}}
          exiting={BaseAnimationMock {}}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              [
                {
                  "height": 10,
                  "width": 10,
                },
                {
                  "backgroundColor": "#8973CD",
                  "borderRadius": 50,
                },
              ],
              undefined,
            ]
          }
        >
          circular
        </View>
      </View>
    </View>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
